# Kernel-Driver-Dumper

./: CMakeLists.txt  DriverDumper.c  DriverDumper.h  README.md
include/: driverdumper.h
src/: main.c
src/core/: driver_analysis.c  memory_analysis.c  security_analysis.c
